Fix game log and rules text overflow. Still needs work when scren heigh is too small

--- a/style..css
+++ b/style..css
@@ -199,6 +199,9 @@ img {
 }
 
 
+/* 
+OLD RIGHT PANE
+
 .right_pane {
     flex: 1;
     padding: 10px;
@@ -247,5 +250,49 @@ img {
     max-height: 200px;
     padding: 10px;
     overflow-y: scroll;
+} */
+
+.right_pane {
+    flex: 1;
+    padding: 10px;
+    gap: 20px;
 }
 
+.rules {
+    height: 20vh;
+    margin-bottom: 25px;
+    border-radius: 10px;
+    border: 2px solid var(--primary-color);
+    box-shadow: 0 0 15px 1px var(--accent-color);
+    background-color: var(--secondary-color);
+    color: #000;
+}
+
+.rules__header, .game_log__header {
+    padding: 10px;
+    border-bottom: 2px solid black;
+    background-color: var(--accent-color);
+    border-radius: 10px;
+}
+
+.rules__text {
+    padding: 10px;
+    overflow-y: scroll;
+    max-height: 65%;
+}
+
+.game_log {
+    height: 50vh;
+    border-radius: 10px;
+    border: 2px solid var(--primary-color);
+    box-shadow: 0 0 15px 1px var(--accent-color);
+    background-color: var(--secondary-color);
+    color: #000;
+}
+
+.game_log__text{
+    height: 85%;
+    max-height: 85%;
+    padding: 10px;
+    overflow-y: scroll;
+} 
